# coc-example

./: build
src/: CMakeLists.txt  main.cpp
